sidebar history not visible issue resolved

--- a/Staff/sidebar.css
+++ b/Staff/sidebar.css
@@ -34,7 +34,7 @@
 /* Show dropdown menu on hover */
 .sidebar ul li:hover .dropdown-content {
     opacity: 1;
-    max-height: 200px;
+    max-height: 500px;
 }
 
 
